--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "css-loader": "^4.3.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-navigation": "^4.4.4",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.37.5",
+    "style-loader": "^1.3.0",
+    "typed": "^1.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
