--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "css-loader": "^4.3.0",
+    "devicon-react-svg": "^0.2.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -15,6 +17,7 @@
     "react-navigation": "^4.4.4",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.37.5",
+    "react-typed": "^1.2.0",
     "style-loader": "^1.3.0",
     "typed": "^1.2.0",
     "web-vitals": "^1.1.2"
